feat: make adjustments to styles to make it more like that of exavault's

--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,14 @@ body {
   min-height: 51px;
   width: 100%;
 }
+
+.drawerNavs {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100%;
+}
+
+.drawerBottomNavs {
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
